# testizer_email_funnels

./: .env.example  .gitignore  Dockerfile  README.md  README.ru.md  context_gen.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
analytics/: report_service.py  reports.py  tracking.py
app/: main.py
brevo/: api_client.py  models.py  sync_worker.py
cli/: report_job.py
config/: settings.py
db/: connection.py  selectors.py
docs/: operations_guide.md  scheduling.md
docs/en/: analytics_guide.md  deliverability.md  docker_guide.md  operations_guide.md  scheduling.md
docs/ru/: analytics_guide.md  deliverability.md  docker_guide.md  operations_guide.md
funnels/: purchase_sync_service.py  sync_service.py
logging_config/: logger.py
scripts/: __init__.py  init_test_db.py  reset_test_db.py
tests/: conftest.py  test_app_report_conversions.py  test_brevo_models.py  test_integration_main.py  test_logging_config.py  test_purchase_sync_service.py  test_tracking.py
tests/analytics/: test_report_service.py  test_tracking.py
tests/app/: test_main.py
tests/brevo/: test_api_client.py  test_sync_worker.py
tests/config/: test_settings.py
tests/db/: test_connection.py  test_selectors.py
tests/funnels/: test_models.py  test_purchase_sync_service.py  test_sync_service.py
tests/integration/: test_app_main_dry_run.py  test_funnel_sync_integration.py
tests/mysql/: test_schema.sql
tests/utils/: mysql_test_utils.py
