[project]
requires-python = ">=3.11"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\\.pyi?$'
extend-exclude = '''
/(
    \\.git
  | \\.venv
  | venv
  | \\.mypy_cache
  | __pycache__
)/
'''

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "\\.venv",
    "__pycache__"
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = [
    "E203",  # keep compatible with black
    "E501",  # line too long (handled by black formatter)
]

[tool.ruff.lint.per-file-ignores]
# Example: relax some rules for tests if needed in the future
# "tests/**" = ["S101"]

